2012-03-29 S. Thiell <stephane.thiell@cea.fr>

	* Task.py: timeout parameters better explained (ticket #157).

2012-03-28 S. Thiell <stephane.thiell@cea.fr>

	* CLI/OptionParser.py: Add --diff option to enable diff display between
	gathered outputs. Enabled in clush and clubak (ticket #176).

	* CLI/Display.py: Add _print_diff() and flush() methods.

	* Task.py: Initialize MsgTree instances in constructor according to
	default values in order to allow no-op calls to buffer getters before
	resume() (ticket #186).

2012-03-26 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Clush.py: Fix clush --[r]copy behavior when no source directory is
	specified (ticket #172).

	* CLI/Clush.py: Fix interactive mode gather/standard toggle error, when
	using special character '=' (ticket #171).

	* CLI/Clubak.py: Add -v/-q verbosity options (ticket #174).

2012-03-24 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Clubak.py: Add --interpret-keys=never,always,auto option to clubak
	to allow a more generic usage of clubak, ie. even in cases where keys are
	not nodeset compliant (ticket #180).

2012-03-21 S. Thiell <stephane.thiell@cea.fr>

	* conf/groups.conf: Fix group cross reference issue (ticket #183), we now
	use sed commands instead of awk ones in this default groups.conf file.

2012-03-18 S. Thiell <stephane.thiell@cea.fr>

	* conf/groups.conf: Fix default source regexp for mawk (ticket #178). 

	* Packaging: Add groups.conf.d directory and sample files.

2012-03-17 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Nodeset.py: Add support for -l[ll] <nodeset(s)> to list belonging
	groups (CLI interface to NodeSet.groups()) (ticket #162).

	* NodeSet: Add groups() public method to list groups nodeset belongs to.

2012-03-15 S. Thiell <stephane.thiell@cea.fr>

	* NodeUtils.py: Add groupsdir option (ticket #179).

2012-03-14 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Nodeset.py: Add --contiguous splitting option (ticket #173).

	* NodeSet.py: Add contiguous() iterator.
